--- a/style.css
+++ b/style.css
@@ -261,7 +261,8 @@ img {
     border-bottom-color: coral;
     border-bottom-width: 3px;
     object-fit: cover;
-    height: 100%;
+    max-height: 150px;
+    width: 100%;
     box-shadow: 1px 1px 1px 1px grey;
 }
 
