--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@ body {
 
 .imgcontainer {
     max-height: 150px;
+    width: 100%;
 }
 
 img, .portfolio-card {
@@ -262,7 +263,8 @@ img {
     border-bottom-width: 3px;
     object-fit: cover;
     max-height: 150px;
-    width: 100%;
+    max-width: 480px;
+    min-width: 100%;
     box-shadow: 1px 1px 1px 1px grey;
 }
 
